--- a/bitdash/commercial-dashboard.html
+++ b/bitdash/commercial-dashboard.html
@@ -55,10 +55,7 @@
     .info-tip{display:inline-flex;align-items:center;justify-content:center;width:18px;height:18px;border-radius:999px;border:1px solid #4f6fc7;background:#1a2a57;color:#cfe0ff;font-size:.75rem;font-weight:700;cursor:help;vertical-align:middle;margin-left:6px;position:relative}
     .info-tip .tip-box{display:none;position:absolute;top:24px;left:0;z-index:20;width:min(420px,78vw);background:#0f1731;border:1px solid #3b56a2;border-radius:10px;padding:10px;color:#dce6ff;font-size:.86rem;line-height:1.35;box-shadow:0 10px 24px rgba(0,0,0,.35)}
     .info-tip:hover .tip-box,.info-tip.open .tip-box{display:block}
-  
-    #diagPanel{position:fixed;right:12px;bottom:12px;width:min(520px,92vw);max-height:46vh;overflow:auto;padding:10px;border:1px dashed #3d58a6;border-radius:10px;background:#0a132e;color:#bcd0ff;font:12px/1.4 ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;white-space:pre-wrap;display:none;z-index:99999;box-shadow:0 8px 30px rgba(0,0,0,.45)}
-    #diagPanel.show{display:block}
-    </style>
+  </style>
 </head>
 <body>
   <div class="topbar">
@@ -146,68 +143,16 @@
       <button id="refreshBtn">Atualizar P/VP automático</button>
       <span id="status" class="muted">Aguardando atualização.</span>
       <span id="mode" class="muted"></span>
-      <span id="addResultBanner" class="add-ok-banner hidden"></span>
     </div>
     <table>
       <thead><tr><th>Ativo</th><th>Classe</th><th>Métrica (P/VP | P/L | Ref.)</th><th>Decisão</th><th>Motivo</th></tr></thead>
       <tbody id="decisionRows"></tbody>
     </table>
-  <pre id="diagPanel"></pre>
   </div>
 
 <script>
 try { localStorage.removeItem('bitdash_api_url'); } catch {}
 const API = (window.BITDASH_API_URL || 'https://bitdash-api.crlages.workers.dev').replace(/\/$/, '');
-
-const DIAG = new URL(location.href).searchParams.get('diag') === '1' || localStorage.getItem('bitdash_diag') === '1';
-if (new URL(location.href).searchParams.get('diag') === '1') { try { localStorage.setItem('bitdash_diag','1'); } catch {} }
-function parseTokenLocal(){
-  try {
-    const token = String(localStorage.getItem('bitdash_auth_token') || '').trim();
-    if (!token) return { tokenPresent:false };
-    const body = token.split('.')[0] || '';
-    const b64 = body.replace(/-/g,'+').replace(/_/g,'/');
-    const pad = b64.length % 4 ? '='.repeat(4 - (b64.length % 4)) : '';
-    const payload = JSON.parse(atob(b64 + pad));
-    return {
-      tokenPresent:true,
-      email: payload?.email || null,
-      expIso: payload?.exp ? new Date(Number(payload.exp)).toISOString() : null,
-      expired: payload?.exp ? Date.now() > Number(payload.exp) : null,
-      len: token.length,
-    };
-  } catch (e) { return { tokenPresent:true, parseError:String(e.message||e) }; }
-}
-function renderDiag(extra={}){
-  if (!DIAG) return;
-  const el = document.getElementById('diagPanel');
-  if (!el) return;
-  el.classList.add('show');
-  const base = {
-    page: location.pathname,
-    api: API,
-    ts: new Date().toISOString(),
-    localUser: localStorage.getItem('bitdash_local_user') || null,
-    ...parseTokenLocal(),
-    authBtnText: (document.getElementById('authBtn')?.textContent || null),
-    lastAdd: (()=>{ try { return JSON.parse(localStorage.getItem('bitdash_last_add_result')||'null'); } catch { return null; } })(),
-    ...extra,
-  };
-  try {
-    const email = String(base.email || base.localUser || '').trim().toLowerCase();
-    if (email) {
-      const btn = document.getElementById('authBtn');
-      const saveBtn = document.getElementById('saveBtn');
-      const logoutBtn = document.getElementById('logoutBtn');
-      if (btn) btn.textContent = `Premium: ${email}`;
-      if (saveBtn) saveBtn.classList.remove('hidden');
-      if (logoutBtn) logoutBtn.classList.remove('hidden');
-      base.authBtnText = btn?.textContent || base.authBtnText;
-      base.forcedAuthUi = true;
-    }
-  } catch {}
-  el.textContent = '[BITDASH DIAG]\n' + JSON.stringify(base, null, 2);
-}
 
 function bootstrapSessionFromUrl(){
   try {
@@ -271,25 +216,6 @@ function parseLocalSession(){
   } catch { return null; }
 }
 
-
-function readLastAddResult(){
-  try { return JSON.parse(localStorage.getItem('bitdash_last_add_result') || 'null'); } catch { return null; }
-}
-
-function renderLastAddBanner(){
-  const el = document.getElementById('addResultBanner');
-  if (!el) return;
-  const r = readLastAddResult();
-  if (!r || !Array.isArray(r.tickers) || !r.tickers.length) {
-    el.classList.add('hidden');
-    el.textContent = '';
-    return;
-  }
-  const when = r.at ? new Date(r.at).toLocaleString('pt-BR') : '';
-  el.textContent = `Último add salvo: ${r.tickers.join(', ')} • aprovados: ${r.approved || 0} • ${when}`;
-  el.classList.remove('hidden');
-}
-
 function getLocalPremiumEmail(){
   const e = String(localStorage.getItem('bitdash_local_user') || '').trim().toLowerCase();
   return e || null;
@@ -307,27 +233,11 @@ async function api(path, method='GET', body){
   });
   let j={}; try{ j=await r.json(); }catch{}
   if (j?.token) { try { localStorage.setItem('bitdash_auth_token', j.token); } catch {} }
-  if(!r.ok || j.ok===false) { renderDiag({ apiPath:path, apiStatus:r.status, apiOk:false, apiError:j.error || `http_${r.status}` }); throw new Error(j.error || `http_${r.status}`); }
-  renderDiag({ apiPath:path, apiStatus:r.status, apiOk:true });
+  if(!r.ok || j.ok===false) throw new Error(j.error || `http_${r.status}`);
   return j;
 }
 
-function isPremium(){
-  const s = parseLocalSession();
-  return !!s?.email;
-}
-
-function syncAuthBadge(){
-  const btn = document.getElementById('authBtn');
-  if (!btn) return;
-  const sess = parseLocalSession();
-  const email = sess?.email || String(localStorage.getItem('bitdash_local_user') || '').trim().toLowerCase() || '';
-  btn.textContent = email ? `Premium: ${email}` : 'Login Premium';
-  const saveBtn = document.getElementById('saveBtn');
-  const logoutBtn = document.getElementById('logoutBtn');
-  if (saveBtn) saveBtn.classList.toggle('hidden', !email);
-  if (logoutBtn) logoutBtn.classList.toggle('hidden', !email);
-}
+function isPremium(){ return !!currentUser?.email; }
 
 function mergePortfolio(base=[], inbound=[]){
   const m = new Map();
@@ -422,25 +332,22 @@ async function fetchLivePrice(asset){
 }
 
 function render(){
-  const sess = parseLocalSession();
-  if (sess?.email) currentUser = sess;
-  syncAuthBadge();
+  document.getElementById('authBtn').textContent = currentUser?.email ? `Premium: ${currentUser.email}` : 'Login Premium';
+  document.getElementById('saveBtn').classList.toggle('hidden', !isPremium());
+  document.getElementById('logoutBtn').classList.toggle('hidden', !isPremium());
   document.getElementById('mode').textContent = isPremium()
     ? 'Modo premium: pode salvar e recuperar depois.'
     : 'Modo grátis: ao sair do site, os dados podem ser perdidos (amostra).';
-  syncAuthBadge();
 
   const invFiis = document.getElementById('invFiis'); invFiis.innerHTML='';
   const invAcoes = document.getElementById('invAcoes'); invAcoes.innerHTML='';
   const invCriptos = document.getElementById('invCriptos'); invCriptos.innerHTML='';
   const dec = document.getElementById('decisionRows'); dec.innerHTML='';
 
-  const lastAddTickers = new Set((readLastAddResult()?.tickers || []).map(x=>String(x||'').toUpperCase()));
   portfolio.forEach(a=>{
     const unit = unitPrice(a);
     const total = estimateValue(a);
     const trInv=document.createElement('tr');
-    if (lastAddTickers.has(String(a.ticker).toUpperCase())) trInv.classList.add('add-hl');
     trInv.innerHTML=`<td><strong>${a.ticker}</strong></td><td>${Number(a.qty).toLocaleString('pt-BR',{maximumFractionDigits:8})}</td><td>${brlOrNd(unit)}</td><td>${brlOrNd(total)}</td>`;
     if (a.cls==='FII') invFiis.appendChild(trInv);
     else if (a.cls==='CRIPTO') invCriptos.appendChild(trInv);
@@ -452,7 +359,6 @@ function render(){
     tr2.innerHTML=`<td><strong>${a.ticker}</strong></td><td>${a.cls}</td><td>${v!=null?(a.cls==='CRIPTO'?`${v.toFixed(2)}% (24h)`:(metricTypes[a.ticker]==='pl'?`${v.toFixed(2)} (P/L)`:(metricTypes[a.ticker]==='ref'?`${v.toFixed(2)} (Ref.)`:v.toFixed(2)))):'-'}</td><td><span class="decision ${cls}">${txt}</span></td><td>${reason(a)}</td>`;
     dec.appendChild(tr2);
   });
-  renderLastAddBanner();
   updateSummary();
 }
 
@@ -753,26 +659,19 @@ async function loadNews(){
 })();
 
 window.addEventListener('resize', () => {
-  renderLastAddBanner();
   updateSummary();
 });
 
 (async function init(){
   bootstrapSessionFromUrl();
-  renderDiag({ stage:'dashboard-init-start' });
   portfolio = (await loadPortfolio()).map(x=>{
     const ticker = normalizeTicker(x.ticker);
     return { ...x, ticker, cls: classify(ticker) };
   });
   render();
-  renderDiag({ stage:'dashboard-after-render', currentUser: currentUser?.email || null, premiumUi: isPremium(), authBtnText: (document.getElementById('authBtn')?.textContent || null) });
-  try { const me = await api('/auth/me'); renderDiag({ stage:'dashboard-auth-me', meOk: !!me?.ok, meEmail: me?.user?.email || null }); } catch(e){ renderDiag({ stage:'dashboard-auth-me-fail', err:String(e.message||e) }); }
   // não bloqueia interface: inicia em paralelo
   refresh();
   setTimeout(loadNews, 150);
-  setTimeout(syncAuthBadge, 50);
-  setTimeout(syncAuthBadge, 500);
-  setInterval(syncAuthBadge, 1000);
 })();
 </script>
 </body>
