--- a/bitdash/commercial-dashboard.html
+++ b/bitdash/commercial-dashboard.html
@@ -79,6 +79,26 @@ async function api(path, method='GET', body){
   return j;
 }
 
+function mergeByTicker(base=[], incoming=[]){
+  const m = new Map();
+  for (const a of (base||[])) { const t=normalizeTicker(a.ticker); const q=Number(a.qty||0); if(t&&q>0) m.set(t,{ticker:t,qty:q,cls:a.cls || (String(t).endsWith('11') ? 'FII' : 'AÇÃO')}); }
+  for (const a of (incoming||[])) { const t=normalizeTicker(a.ticker); const q=Number(a.qty||0); if(!t||q<=0) continue; const prev=m.get(t); m.set(t,{ticker:t,qty:(prev?.qty||0)+q,cls:a.cls || (String(t).endsWith('11') ? 'FII' : 'AÇÃO')}); }
+  return [...m.values()];
+}
+
+function readInbound(){
+  try {
+    const raw = localStorage.getItem('bitdash_inbound_portfolio') || '';
+    if (!raw) return [];
+    const arr = JSON.parse(raw);
+    return Array.isArray(arr) ? arr : [];
+  } catch { return []; }
+}
+
+function clearInbound(){
+  try { localStorage.removeItem('bitdash_inbound_portfolio'); } catch {}
+}
+
 function render(){
   setAuthUi();
 updateGuestBadge();
@@ -102,17 +122,27 @@ async function loadPortfolio(){
     if (!parseToken()) {
       const cached = JSON.parse(localStorage.getItem('bitdash_portfolio_cache') || '[]');
       portfolio = Array.isArray(cached) ? cached : [];
+      const inbound = readInbound();
+      if (inbound.length) { portfolio = mergeByTicker(portfolio, inbound); clearInbound(); localStorage.setItem('bitdash_portfolio_cache', JSON.stringify(portfolio)); }
       st.textContent = 'Modo convidado: carteira local carregada.';
       render();
       return;
     }
     const j = await api('/portfolio');
     portfolio = Array.isArray(j.portfolio) ? j.portfolio : [];
+    const inbound = readInbound();
+    if (inbound.length) {
+      portfolio = mergeByTicker(portfolio, inbound);
+      clearInbound();
+      try { await api('/portfolio','POST',{ portfolio }); } catch {}
+    }
     localStorage.setItem('bitdash_portfolio_cache', JSON.stringify(portfolio));
     st.textContent = 'Carteira carregada.';
   } catch (e) {
     const cached = JSON.parse(localStorage.getItem('bitdash_portfolio_cache') || '[]');
     portfolio = Array.isArray(cached) ? cached : [];
+    const inbound = readInbound();
+    if (inbound.length) { portfolio = mergeByTicker(portfolio, inbound); clearInbound(); localStorage.setItem('bitdash_portfolio_cache', JSON.stringify(portfolio)); }
     st.textContent = 'Falha ao carregar da nuvem, exibindo cache local: ' + (e.message || e);
   }
   render();
