--- a/bitdash/index.html
+++ b/bitdash/index.html
@@ -350,6 +350,26 @@ async function fetchLivePrice(asset){
   return j.priceBrl;
 }
 
+function mergeByTicker(base=[], incoming=[]){
+  const m = new Map();
+  for (const a of (base||[])) { const t=normalizeTicker(a.ticker); const q=Number(a.qty||0); if(t&&q>0) m.set(t,{ticker:t,qty:q,cls:a.cls || (String(t).endsWith('11') ? 'FII' : 'AÇÃO')}); }
+  for (const a of (incoming||[])) { const t=normalizeTicker(a.ticker); const q=Number(a.qty||0); if(!t||q<=0) continue; const prev=m.get(t); m.set(t,{ticker:t,qty:(prev?.qty||0)+q,cls:a.cls || (String(t).endsWith('11') ? 'FII' : 'AÇÃO')}); }
+  return [...m.values()];
+}
+
+function readInbound(){
+  try {
+    const raw = localStorage.getItem('bitdash_inbound_portfolio') || '';
+    if (!raw) return [];
+    const arr = JSON.parse(raw);
+    return Array.isArray(arr) ? arr : [];
+  } catch { return []; }
+}
+
+function clearInbound(){
+  try { localStorage.removeItem('bitdash_inbound_portfolio'); } catch {}
+}
+
 function render(){
   const se = getSessionEmail();
   if (se) currentUser = { email: se, name: null };
