--- a/bitdash/commercial-dashboard.html
+++ b/bitdash/commercial-dashboard.html
@@ -89,7 +89,7 @@ async function api(path, method='GET', body){
 function mergeByTicker(base=[], incoming=[]){
   const m = new Map();
   for (const a of (base||[])) { const t=normalizeTicker(a.ticker); const q=Number(a.qty||0); if(t&&q>0) m.set(t,{ticker:t,qty:q,cls:a.cls || (String(t).endsWith('11') ? 'FII' : 'AÇÃO')}); }
-  for (const a of (incoming||[])) { const t=normalizeTicker(a.ticker); const q=Number(a.qty||0); if(!t||q<=0) continue; const prev=m.get(t); m.set(t,{ticker:t,qty:(prev?.qty||0)+q,cls:a.cls || (String(t).endsWith('11') ? 'FII' : 'AÇÃO')}); }
+  for (const a of (incoming||[])) { const t=normalizeTicker(a.ticker); const q=Number(a.qty||0); if(!t||q<=0) continue; const prev=m.get(t); m.set(t,{ticker:t,qty:q,cls:a.cls || (String(t).endsWith('11') ? 'FII' : 'AÇÃO')}); }
   return [...m.values()];
 }
 
